# ChangeLog for media-sound/amarok-utils
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/amarok-utils/Attic/ChangeLog,v 1.22 2010/04/19 13:37:58 jmbsvicetto Exp $

  19 Apr 2010; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  amarok-utils-2.3.0.90.ebuild:
  [media-sound/amarok-utils-2.3.0.90] Fixing SRC_URI as betas are in the
  unstable tree - thanks to Torsten (tove). 

*amarok-utils-2.3.0.90 (17 Apr 2010)

  17 Apr 2010; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +amarok-utils-2.3.0.90.ebuild:
  [media-sound/amarok-utils] Bumped to the 2.3.1 Beta 1 (2.3.0.90) release.

*amarok-utils-2.3.0 (15 Mar 2010)

  15 Mar 2010; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +amarok-utils-2.3.0.ebuild:
  Bumped amarok-utils to the 2.3.0 release.

  25 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
  amarok-utils-2.2.2-r1.ebuild:
  stable x86, bug 305909

  23 Feb 2010; Joseph Jezak <josejx@gentoo.org>
  amarok-utils-2.2.2-r1.ebuild, amarok-utils-2.2.2.90.ebuild:
  Marked ~ppc for bug #280552.

  20 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  amarok-utils-2.2.2-r1.ebuild:
  amd64 stable wrt #305909

  19 Feb 2010; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  amarok-utils-2.2.2.ebuild:
  Fixed amarok-utils-2.2.2 SRC_URI (2.2.2 is in stable not unstable).

*amarok-utils-2.2.2-r1 (19 Feb 2010)

  19 Feb 2010; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +amarok-utils-2.2.2-r1.ebuild:
  Rev-bumped amarok-utils-2.2.2 to fix the deps and to ask for a quick
  stabilization.
  Dropped the bindist use flag and added a hard dep on taglib[asf,mp4] (bug
  299899) - thanks to Jeff Mitchell (jefferai).

  19 Feb 2010; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  -amarok-utils-2.2.1.ebuild, -amarok-utils-2.2.1-r1.ebuild,
  -amarok-utils-2.2.1.90.ebuild:
  Cleaned old versions.

*amarok-utils-2.2.2.90 (19 Feb 2010)
