@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/amarok-utils
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/amarok-utils/Attic/ChangeLog,v 1.22 2010/04/19 13:37:58 jmbsvicetto Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/amarok-utils/Attic/ChangeLog,v 1.23 2010/05/28 02:55:24 jmbsvicetto Exp $
+
+*amarok-utils-2.3.1 (28 May 2010)
+
+  28 May 2010; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
+  +amarok-utils-2.3.1.ebuild:
+  [media-sound/amarok-utils] Bumped to the 2.3.1 release.
 
   19 Apr 2010; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
   amarok-utils-2.3.0.90.ebuild:
